fixing comments like begin and end portlet, etc. and deleting thead and tbody datatable treatments detail on all user

--- a/user_superadmin/finance_pengeluaran_detail.html
+++ b/user_superadmin/finance_pengeluaran_detail.html
@@ -342,7 +342,6 @@ License: You must have a valid license purchased only from themeforest(the above
 								<div class="col-lg-8 col-xl-6">
 
 									<!--begin::Portlet-->
-
 									<div class="kt-portlet kt-portlet--mobile" id="print-section">
 										<div class="kt-portlet__head centered-content">
 											<div class="kt-portlet__head-label">
@@ -382,21 +381,7 @@ License: You must have a valid license purchased only from themeforest(the above
 													</div>
 												</div>
                                             </div>
-
-
-                                            <!--begin: Datatable -->
-        									<table class="table table-striped- table-bordered table-hover table-checkable" id="table_pengeluaran_detail">
-        										<thead>
-        											<tr>
-        												<th>No.</th>
-        												<th>Pengeluaran</th>
-        												<th>Quantity</th>
-        												<th>Harga</th>
-        											</tr>
-        										</thead>
-        									</table>
-
-        									<!--end: Datatable -->
+        									<table class="table table-bordered table-hover table-checkable" id="table_pengeluaran_detail"></table>
 											<div class="col-12" style="padding: 0px 0px" style="margin-bottom:0px;">
                                                 <span>Penerima : <span class="kt-font-bold" name="pengeluaran_detai_penerima">Ica</span></span>&nbsp;<br>
                                                 <span>Jenis Pembayaran : <span class="kt-font-bold" name="pengeluaran_detai_jenis_pembayaran">Cash</span></span>&nbsp;<br>
