--- a/user_superadmin/hr_karyawan_detail.html
+++ b/user_superadmin/hr_karyawan_detail.html
@@ -379,20 +379,6 @@ License: You must have a valid license purchased only from themeforest(the above
 											</div>
 										</div>
 										<div class="kt-portlet__body">
-											<!-- <ul class="nav nav-tabs nav-fill" role="tablist">
-												<li class="nav-item">
-													<a class="nav-link active" data-toggle="tab" href="#tab-biodata">Biodata</a>
-												</li>
-												<li class="nav-item">
-													<a class="nav-link" data-toggle="tab" href="#tab-treatment">Treatment</a>
-												</li>
-												<li class="nav-item">
-													<a class="nav-link" data-toggle="tab" href="#tab-kehadiran">Kehadiran</a>
-												</li>
-												<li class="nav-item">
-													<a class="nav-link" data-toggle="tab" href="#tab-payroll">Payroll</a>
-												</li>
-											</ul> -->
 											<div class="tab-content">
 												<div class="tab-pane active" id="tab-biodata" role="tabpanel">
                                                     <div class="row">
@@ -463,7 +449,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                                     </div>
 												</div>
 												<div class="tab-pane" id="tab-treatment" role="tabpanel">
-													<form class="kt-form kt-form--fit kt-margin-b-10">
+													<form class="kt-margin-b-10">
 		    											<div class="row justify-space-between">
 															<div class="col-lg-4 col-sm-6 input-daterange input-group margin-mobile-b-5">
 																<input readonly type="text" class="form-control kt-input" name="start" placeholder="Pilih Tanggal" data-col-index="1" id="kt_search_waktu"/>
@@ -481,7 +467,7 @@ License: You must have a valid license purchased only from themeforest(the above
 													<table class="table table-striped- table-bordered table-hover table-checkable" id="table_karyawan_treatment"></table>
 												</div>
 												<div class="tab-pane" id="tab-kehadiran" role="tabpanel">
-													<form class="kt-form kt-form--fit kt-margin-b-10">
+													<form class="kt-margin-b-10">
 		    											<div class="row justify-space-between">
 															<div class="col-lg-4 col-sm-6 input-daterange input-group margin-mobile-b-5">
 																<input readonly type="text" class="form-control kt-input_2" name="start" placeholder="Pilih Tanggal" data-col-index="1" id="kt_search_waktu_2"/>
@@ -499,7 +485,7 @@ License: You must have a valid license purchased only from themeforest(the above
 													<table class="table table-striped- table-bordered table-hover table-checkable" id="table_karyawan_kehadiran"></table>
 												</div>
 												<div class="tab-pane" id="tab-payroll" role="tabpanel">
-													<form class="kt-form kt-form--fit kt-margin-b-10">
+													<form class="kt-margin-b-10">
 		    											<div class="row">
 															<div class="col-lg-4 col-sm-6 input-daterange input-group margin-mobile-b-5">
 																<input readonly type="text" class="form-control kt-input_month" name="start" placeholder="Pilih Bulan" data-col-index="1" id="kt_search_month"/>
@@ -529,6 +515,7 @@ License: You must have a valid license purchased only from themeforest(the above
 
 									<!--end::Portlet-->
 								</div>
+
 							</div>
 
 							<!--begin::Modal-->
@@ -614,7 +601,6 @@ License: You must have a valid license purchased only from themeforest(the above
 							</div>
 
 							<!--end::Modal-->
-
 						</div>
 
 						<!-- end:: Content -->
