--- a/user_superadmin/treatment_detail_paid.html
+++ b/user_superadmin/treatment_detail_paid.html
@@ -339,7 +339,6 @@ License: You must have a valid license purchased only from themeforest(the above
 								<div class="col-lg-8 col-xl-6">
 
 									<!--begin::Portlet-->
-
 									<div class="kt-portlet kt-portlet--mobile" id="print-section">
 										<div class="kt-portlet__head centered-content">
 											<div class="kt-portlet__head-label">
@@ -382,19 +381,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                                     <th style="font-weight:500;" name="treatment_therapist">Ka</th>
                                                 </tr>
                                             </table>
-
-                                            <!--begin: Datatable -->
-        									<table class="table table-striped- table-bordered table-hover table-checkable" id="table_treatment_detail">
-        										<thead>
-        											<tr>
-        												<th>No.</th>
-        												<th>Treatment</th>
-        												<th>Harga</th>
-        											</tr>
-        										</thead>
-        									</table>
-
-        									<!--end: Datatable -->
+        									<table class="table table-striped- table-bordered table-hover table-checkable" id="table_treatment_detail"></table>
                                             <div class="col-12 justify-end" style="padding: 0px 0px">
                                                 <div style="text-align:right;width:50%">
                                                     <span class="kt-font-bold">Sub-Total :</span>&nbsp;
@@ -420,7 +407,6 @@ License: You must have a valid license purchased only from themeforest(the above
 		                                                </tr>
 		                                            </table>
 												</div>
-
 												<div class="col-6" style="padding-left:0px;text-align:right;">
 	                                                <span class="kt-font-bold">Tipe Complaint :</span>&nbsp;<br>
     	                                            <span name="complaint_tipe">Eyelash Extension</span>&nbsp;<br>
