--- a/user_admin/customer_detail.html
+++ b/user_admin/customer_detail.html
@@ -350,8 +350,7 @@ License: You must have a valid license purchased only from themeforest(the above
 												</div>
                                             </div>
 
-											<!--begin: Search Form -->
-											<form class="kt-form kt-form--fit kt-margin-b-10">
+											<form class="kt-margin-b-10">
     											<div class="row justify-space-between">
 													<div class="col-lg-4 col-sm-6 input-daterange input-group margin-mobile-b-5">
 														<input readonly type="text" class="form-control kt-input" name="start" placeholder="Pilih Tanggal" data-col-index="1" id="kt_search_waktu"/>
@@ -366,24 +365,7 @@ License: You must have a valid license purchased only from themeforest(the above
 													</div>
     											</div>
     										</form>
-
-                                            <!-- end: Search Form -->
-
-                                            <!-- begin: Datatable -->
                                             <table class="table table-striped- table-bordered table-hover table-checkable" id="table_customer_detail"></table>
-
-        									<!--end: Datatable -->
-										</div>
-										<div class="kt-portlet__foot kt-hidden">
-											<div class="row">
-												<div class="col-lg-6">
-													Portlet footer:
-												</div>
-												<div class="col-lg-6">
-													<button type="submit" class="btn btn-primary">Submit</button>
-													<span class="kt-margin-left-10">or <a href="#" class="kt-link kt-font-bold">Cancel</a></span>
-												</div>
-											</div>
 										</div>
 									</div>
 
