--- a/user_admin/listTreatment_active.html
+++ b/user_admin/listTreatment_active.html
@@ -166,7 +166,7 @@ License: You must have a valid license purchased only from themeforest(the above
 								</svg></span><span class="kt-menu__link-text">Finance</span><i class="kt-menu__ver-arrow la la-angle-right"></i></a>
 									<div class="kt-menu__submenu "><span class="kt-menu__arrow"></span>
 										<ul class="kt-menu__subnav">
-											<li class="kt-menu__item  kt-menu__item--active" aria-haspopup="true"><a href="user_admin/finance_laporanKeuangan.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Laporan Keuangan</span></a></li>
+											<li class="kt-menu__item " aria-haspopup="true"><a href="user_admin/finance_laporanKeuangan.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Laporan Keuangan</span></a></li>
 											<li class="kt-menu__item " aria-haspopup="true"><a href="user_admin/finance_pengeluaran.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Pengeluaran</span></a></li>
 											<li class="kt-menu__item " aria-haspopup="true"><a href="user_admin/finance_pemasukan.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Pemasukan</span></a></li>
 										</ul>
@@ -330,8 +330,6 @@ License: You must have a valid license purchased only from themeforest(the above
 											</div>
 										</div>
 										<div class="kt-portlet__body">
-
-                                            <!--begin: Search Form -->
 											<form class="kt-form kt-form--fit kt-margin-b-10">
     											<div class="row justify-space-between">
 													<div class="col-lg-4 col-sm-6 input-daterange input-group margin-mobile-b-5">
@@ -347,20 +345,15 @@ License: You must have a valid license purchased only from themeforest(the above
 													</div>
     											</div>
     										</form>
-
-                                            <!-- end: Search Form -->
-
                                             <table class="table table-striped- table-bordered table-hover table-checkable" id="table_treatment_active"></table>
-
-        									<!--end: Datatable -->
 										</div>
 									</div>
 
 									<!--end::Portlet-->
 								</div>
+
 							</div>
 
-							<!--end::Modal-->
 						</div>
 
 						<!-- end:: Content -->
