--- a/user_admin/listTreatment_detail_scheduled.html
+++ b/user_admin/listTreatment_detail_scheduled.html
@@ -321,7 +321,6 @@ License: You must have a valid license purchased only from themeforest(the above
 								<div class="col-lg-8 col-xl-6">
 
 									<!--begin::Portlet-->
-
 									<div class="kt-portlet kt-portlet--mobile">
 										<div class="kt-portlet__head centered-content">
 											<div class="kt-portlet__head-label">
@@ -349,19 +348,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                                     <th style="font-weight:500;" name="treatment_therapist">Ka</th>
                                                 </tr>
                                             </table>
-
-                                            <!--begin: Datatable -->
-        									<table class="table table-striped- table-bordered table-hover table-checkable" id="table_treatment_detail">
-        										<thead>
-        											<tr>
-        												<th>No.</th>
-        												<th>Treatment</th>
-        												<th>Harga</th>
-        											</tr>
-        										</thead>
-        									</table>
-
-        									<!--end: Datatable -->
+        									<table class="table table-striped- table-bordered table-hover table-checkable" id="table_treatment_detail"></table>
                                             <div class="col-12">
 												<div class="row justify-end" style="padding: 0px; margin-top:50px;">
 													<div class="col-6 justify-end" style="padding: 0px">
