--- a/user_admin/listTreatment_detail_unpaid.html
+++ b/user_admin/listTreatment_detail_unpaid.html
@@ -321,7 +321,6 @@ License: You must have a valid license purchased only from themeforest(the above
 								<div class="col-lg-8 col-xl-6">
 
 									<!--begin::Portlet-->
-
 									<div class="kt-portlet kt-portlet--mobile" id="print-section">
 										<div class="kt-portlet__head centered-content">
 											<div class="kt-portlet__head-label">
@@ -361,19 +360,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                                     <th style="font-weight:500;" name="treatment_therapist">Ka</th>
                                                 </tr>
                                             </table>
-
-                                            <!--begin: Datatable -->
-        									<table class="table table-striped- table-bordered table-hover table-checkable" id="table_treatment_detail">
-        										<thead>
-        											<tr>
-        												<th>No.</th>
-        												<th>Treatment</th>
-        												<th>Harga</th>
-        											</tr>
-        										</thead>
-        									</table>
-
-        									<!--end: Datatable -->
+        									<table class="table table-striped- table-bordered table-hover table-checkable" id="table_treatment_detail"></table>
 											<div class="col-12 horizontal-centered" style="padding: 0px 0px" style="margin-bottom:0px;">
 												<button type="button" class="btn btn-link" style="padding-right:0px;"><i class="flaticon-add"></i>Tambah Treatment</button>
 											</div>
@@ -392,7 +379,6 @@ License: You must have a valid license purchased only from themeforest(the above
 		                                                </tr>
 		                                            </table>
 												</div>
-
 												<div class="col-6" style="padding-left:0px;text-align:right;">
 													<button class="col-5 btn btn-success" style="margin-top:5px;" data-toggle="modal" data-target="#kt_modal_treatment_bayar">Bayar</button>
 												</div>
