--- a/user_admin/listTreatment_void.html
+++ b/user_admin/listTreatment_void.html
@@ -330,9 +330,7 @@ License: You must have a valid license purchased only from themeforest(the above
 											</div>
 										</div>
 										<div class="kt-portlet__body">
-
-                                            <!--begin: Search Form -->
-											<form class="kt-form kt-form--fit kt-margin-b-10">
+											<form class="kt-margin-b-10">
     											<div class="row justify-space-between">
 													<div class="col-lg-4 col-sm-6 input-daterange input-group margin-mobile-b-5">
 														<input readonly type="text" class="form-control kt-input" name="start" placeholder="Pilih Tanggal" data-col-index="1" id="kt_search_waktu"/>
@@ -347,17 +345,13 @@ License: You must have a valid license purchased only from themeforest(the above
 													</div>
     											</div>
     										</form>
-
-                                            <!-- end: Search Form -->
-
                                             <table class="table table-striped- table-bordered table-hover table-checkable" id="table_treatment_void"></table>
-
-        									<!--end: Datatable -->
 										</div>
 									</div>
 
 									<!--end::Portlet-->
 								</div>
+								
 							</div>
 
 						</div>
