--- a/user_therapist/treatment_detail_ongoing.html
+++ b/user_therapist/treatment_detail_ongoing.html
@@ -295,7 +295,6 @@ License: You must have a valid license purchased only from themeforest(the above
 								<div class="col-lg-8 col-xl-6">
 
 									<!--begin::Portlet-->
-
 									<div class="kt-portlet kt-portlet--mobile" id="print-section">
 										<div class="kt-portlet__head centered-content">
 											<div class="kt-portlet__head-label">
@@ -318,19 +317,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                                     <th style="font-weight:500;" name="treatment_hari">2 Oktober 2019</th>
                                                 </tr>
                                             </table>
-
-                                            <!--begin: Datatable -->
-        									<table class="table table-striped- table-bordered table-hover table-checkable" id="table_treatment_detail">
-        										<thead>
-        											<tr>
-        												<th>No.</th>
-        												<th>Treatment</th>
-        												<th>Harga</th>
-        											</tr>
-        										</thead>
-        									</table>
-
-        									<!--end: Datatable -->
+        									<table class="table table-striped- table-bordered table-hover table-checkable" id="table_treatment_detail"></table>
 											<div class="row" style="margin-top:50px;">
 												<div class="col-6" style="padding-right:0px; position: relative;">
 													<table class="col-sm-24 col-md-16 col-lg-12" style="bottom: 0px; position: absolute;">
@@ -346,7 +333,6 @@ License: You must have a valid license purchased only from themeforest(the above
 		                                                </tr>
 		                                            </table>
 												</div>
-
 												<div class="col-6 justify-end" style="padding-left:0px">
 													<div class="col-5" style="padding: 0px">
 														<button type="button" class="btn btn-success col-12" data-toggle="modal" data-target="#kt_modal_treatment_selesai">Selesai</buttton>
