--- a/user_therapist/treatment_detail_scheduled.html
+++ b/user_therapist/treatment_detail_scheduled.html
@@ -295,7 +295,6 @@ License: You must have a valid license purchased only from themeforest(the above
 								<div class="col-lg-8 col-xl-6">
 
 									<!--begin::Portlet-->
-
 									<div class="kt-portlet kt-portlet--mobile" id="print-section">
 										<div class="kt-portlet__head centered-content">
 											<div class="kt-portlet__head-label">
@@ -318,19 +317,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                                     <th style="font-weight:500;" name="treatment_hari">2 Oktober 2019</th>
                                                 </tr>
                                             </table>
-
-                                            <!--begin: Datatable -->
-        									<table class="table table-striped- table-bordered table-hover table-checkable" id="table_treatment_detail">
-        										<thead>
-        											<tr>
-        												<th>No.</th>
-        												<th>Treatment</th>
-        												<th>Harga</th>
-        											</tr>
-        										</thead>
-        									</table>
-
-        									<!--end: Datatable -->
+        									<table class="table table-striped- table-bordered table-hover table-checkable" id="table_treatment_detail"></table>
 											<div class="row" style="margin-top:50px;">
 												<div class="col-6" style="padding-right:0px; position: relative;">
 		                                            <table class="col-sm-24 col-md-16 col-lg-12" style="bottom: 0px; position: absolute;">
@@ -363,7 +350,6 @@ License: You must have a valid license purchased only from themeforest(the above
 							</div>
 
 							<!--begin::Modal-->
-
 							<div class="modal fade" id="kt_modal_treatment_selesai" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
                                 <div class="modal-dialog modal-lg" role="document">
                                     <div class="modal-content">
