--- a/user_admin/index.html
+++ b/user_admin/index.html
@@ -504,69 +504,24 @@ License: You must have a valid license purchased only from themeforest(the above
 		<script src="assets/js/custom/datepicker.js" type="text/javascript"></script>
 
 		<script>
-			// Select2
-			function formatRepo(repo) {
-	            if (repo.loading) return repo.text;
-	            var markup = "<div class='select2-result-repository clearfix'>" +
-	                "<div class='select2-result-repository__meta'>" +
-	                "<div class='select2-result-repository__title'>" + repo.full_name + "</div>";
-	            if (repo.description) {
-	                markup += "<div class='select2-result-repository__description'>" + repo.description + "</div>";
-	            }
-	            markup += "<div class='select2-result-repository__statistics'>" +
-	                "<div class='select2-result-repository__forks'><i class='fa fa-flash'></i> " + repo.forks_count + " Forks</div>" +
-	                "<div class='select2-result-repository__stargazers'><i class='fa fa-star'></i> " + repo.stargazers_count + " Stars</div>" +
-	                "<div class='select2-result-repository__watchers'><i class='fa fa-eye'></i> " + repo.watchers_count + " Watchers</div>" +
-	                "</div>" +
-	                "</div></div>";
-	            return markup;
-	        }
+			// Select2 ajax
+			var no_hp = null;
 
-	        function formatRepoSelection(repo) {
-	            return repo.full_name || repo.text;
-	        }
-
-			$("#kt_select2_treatment_customer_nama").select2({
-	            placeholder: "Nama",
-			    multiple: true,
-			    maximumSelectionSize: 1,
-	            allowClear: true,
-	            ajax: {
-	                url: "source/customer.json",
-	                dataType: 'json',
-			        type: "GET",
-	                delay: 250,
-	                data: function(params) {
-	                    return {
-	                        q: params.term, // search term
-	                        page: params.page
-	                    };
-	                },
-	                processResults: function(data, params) {
-	                    // parse the results into the format expected by Select2
-	                    // since we are using custom formatting functions we do not need to
-	                    // alter the remote JSON data, except to indicate that infinite
-	                    // scrolling can be used
-	                    params.page = params.page || 1;
-
+			$('#kt_select2_treatment_customer_nama').select2({
+				multiple: true,
+				maximumSelectionLength: 1,
+				placeholder: 'Nama',
+				ajax: {
+					url: 'source/admin/customer_select2.php',
+					dataType: 'json',
+					delay: 250,
+					processResults: function (data) {
 						return {
-			                results: $.map(data, function (item) {
-			                    return {
-			                        text: item.nama+', '+item.alamat,
-			                        id: item.no
-			                    }
-			                })
-			            };
-	                },
-	                cache: true
-	            },
-	            escapeMarkup: function(markup) {
-	                return markup;
-	            }, // let our custom formatter work
-	            minimumInputLength: 1
-	            // templateResult: formatRepo, // omitted for brevity, see the source of this page
-	            // templateSelection: formatRepoSelection // omitted for brevity, see the source of this page
-	        });
+							results: data
+						}
+					},
+				}
+			});
 
 			// Sweetalert
 			$('#kt_sweetalert_berhasil').click(function(e) {
