--- a/user_admin/finance_laporanKeuangan.html
+++ b/user_admin/finance_laporanKeuangan.html
@@ -52,7 +52,6 @@ License: You must have a valid license purchased only from themeforest(the above
 			  width: 100%;
 			  height: 400px;
 			}
-
 		</style>
 	</head>
 
@@ -66,7 +65,7 @@ License: You must have a valid license purchased only from themeforest(the above
 		<!-- begin:: Header Mobile -->
 		<div id="kt_header_mobile" class="kt-header-mobile  kt-header-mobile--fixed ">
 			<div class="kt-header-mobile__logo">
-				<a href="index.html">
+				<a href="user_admin/index.html">
 					<h4 class="sidebar-logo">FABULASH</h4>
 				</a>
 			</div>
@@ -86,7 +85,7 @@ License: You must have a valid license purchased only from themeforest(the above
 					<!-- begin:: Aside -->
 					<div class="kt-aside__brand kt-grid__item " id="kt_aside_brand">
 						<div class="kt-aside__brand-logo">
-							<a href="index.html">
+							<a href="user_admin/index.html">
 								<h4 class="aside-logo">FABULASH</h4>
 							</a>
 						</div>
@@ -473,7 +472,7 @@ License: You must have a valid license purchased only from themeforest(the above
                             		</div>
                             	</div>
                             </div>
-							
+
 						</div>
 
 						<!-- end:: Content -->
@@ -691,98 +690,98 @@ License: You must have a valid license purchased only from themeforest(the above
 			chart.hiddenState.properties.opacity = 0; // this creates initial fade-in
 
 			chart.data = [{
-			    "date": "2018-01-01",
-			    "steps": 4561
+				"date": "2018-01-01",
+				"steps": 4561
 			}, {
-			    "date": "2018-01-02",
-			    "steps": 5687
+				"date": "2018-01-02",
+				"steps": 5687
 			}, {
-			    "date": "2018-01-03",
-			    "steps": 6348
+				"date": "2018-01-03",
+				"steps": 6348
 			}, {
-			    "date": "2018-01-04",
-			    "steps": 4878
+				"date": "2018-01-04",
+				"steps": 4878
 			}, {
-			    "date": "2018-01-05",
-			    "steps": 9867
+				"date": "2018-01-05",
+				"steps": 9867
 			}, {
-			    "date": "2018-01-06",
-			    "steps": 7561
+				"date": "2018-01-06",
+				"steps": 7561
 			}, {
-			    "date": "2018-01-07",
-			    "steps": 1287
+				"date": "2018-01-07",
+				"steps": 1287
 			}, {
-			    "date": "2018-01-08",
-			    "steps": 3298
+				"date": "2018-01-08",
+				"steps": 3298
 			}, {
-			    "date": "2018-01-09",
-			    "steps": 5697
+				"date": "2018-01-09",
+				"steps": 5697
 			}, {
-			    "date": "2018-01-10",
-			    "steps": 4878
+				"date": "2018-01-10",
+				"steps": 4878
 			}, {
-			    "date": "2018-01-11",
-			    "steps": 8788
+				"date": "2018-01-11",
+				"steps": 8788
 			}, {
-			    "date": "2018-01-12",
-			    "steps": 9560
+				"date": "2018-01-12",
+				"steps": 9560
 			}, {
-			    "date": "2018-01-13",
-			    "steps": 11687
+				"date": "2018-01-13",
+				"steps": 11687
 			}, {
-			    "date": "2018-01-14",
-			    "steps": 5878
+				"date": "2018-01-14",
+				"steps": 5878
 			}, {
-			    "date": "2018-01-15",
-			    "steps": 9789
+				"date": "2018-01-15",
+				"steps": 9789
 			}, {
-			    "date": "2018-01-16",
-			    "steps": 3987
+				"date": "2018-01-16",
+				"steps": 3987
 			}, {
-			    "date": "2018-01-17",
-			    "steps": 5898
+				"date": "2018-01-17",
+				"steps": 5898
 			}, {
-			    "date": "2018-01-18",
-			    "steps": 9878
+				"date": "2018-01-18",
+				"steps": 9878
 			}, {
-			    "date": "2018-01-19",
-			    "steps": 13687
+				"date": "2018-01-19",
+				"steps": 13687
 			}, {
-			    "date": "2018-01-20",
-			    "steps": 6789
+				"date": "2018-01-20",
+				"steps": 6789
 			}, {
-			    "date": "2018-01-21",
-			    "steps": 4531
+				"date": "2018-01-21",
+				"steps": 4531
 			}, {
-			    "date": "2018-01-22",
-			    "steps": 5856
+				"date": "2018-01-22",
+				"steps": 5856
 			}, {
-			    "date": "2018-01-23",
-			    "steps": 5737
+				"date": "2018-01-23",
+				"steps": 5737
 			}, {
-			    "date": "2018-01-24",
-			    "steps": 9987
+				"date": "2018-01-24",
+				"steps": 9987
 			}, {
-			    "date": "2018-01-25",
-			    "steps": 16457
+				"date": "2018-01-25",
+				"steps": 16457
 			}, {
-			    "date": "2018-01-26",
-			    "steps": 7878
+				"date": "2018-01-26",
+				"steps": 7878
 			}, {
-			    "date": "2018-01-27",
-			    "steps": 6845
+				"date": "2018-01-27",
+				"steps": 6845
 			}, {
-			    "date": "2018-01-28",
-			    "steps": 4659
+				"date": "2018-01-28",
+				"steps": 4659
 			}, {
-			    "date": "2018-01-29",
-			    "steps": 7892
+				"date": "2018-01-29",
+				"steps": 7892
 			}, {
-			    "date": "2018-01-30",
-			    "steps": 7362
+				"date": "2018-01-30",
+				"steps": 7362
 			}, {
-			    "date": "2018-01-31",
-			    "steps": 3268
+				"date": "2018-01-31",
+				"steps": 3268
 			}];
 
 			chart.dateFormatter.inputDateFormat = "YYYY-MM-dd";
@@ -796,11 +795,6 @@ License: You must have a valid license purchased only from themeforest(the above
 			dateAxis.tooltip.hiddenState.properties.visible = true;
 
 			var valueAxis = chart.yAxes.push(new am4charts.ValueAxis());
-			valueAxis.renderer.inside = true;
-			valueAxis.renderer.labels.template.fillOpacity = 0.3;
-			valueAxis.renderer.grid.template.strokeOpacity = 0;
-			valueAxis.min = 0;
-			valueAxis.cursorTooltipEnabled = false;
 
 			var series = chart.series.push(new am4charts.ColumnSeries);
 			series.dataFields.valueY = "steps";
@@ -817,13 +811,7 @@ License: You must have a valid license purchased only from themeforest(the above
 			columnTemplate.strokeOpacity = 0;
 
 			columnTemplate.adapter.add("fill", function (fill, target) {
-			    var dataItem = target.dataItem;
-			    if (dataItem.valueY > 6000) {
-			        return chart.colors.getIndex(0);
-			    }
-			    else {
-			        return am4core.color("#a8b3b7");
-			    }
+				return am4core.color("#8cdbd7");
 			})
 
 
@@ -834,9 +822,9 @@ License: You must have a valid license purchased only from themeforest(the above
 			dateAxis.events.on("datarangechanged", updateTooltip);
 
 			function updateTooltip() {
-			    dateAxis.showTooltipAtPosition(0.5);
-			    series.showTooltipAtPosition(0.5, 0);
-			    series.tooltip.validate(); // otherwise will show other columns values for a second
+				dateAxis.showTooltipAtPosition(0.5);
+				series.showTooltipAtPosition(0.5, 0);
+				series.tooltip.validate(); // otherwise will show other columns values for a second
 			}
 
 			}); // end am4core.ready()
