--- a/user_admin/finance_pengeluaran.html
+++ b/user_admin/finance_pengeluaran.html
@@ -59,7 +59,7 @@ License: You must have a valid license purchased only from themeforest(the above
 		<!-- begin:: Header Mobile -->
 		<div id="kt_header_mobile" class="kt-header-mobile  kt-header-mobile--fixed ">
 			<div class="kt-header-mobile__logo">
-				<a href="index.html">
+				<a href="user_admin/index.html">
 					<h4 class="sidebar-logo">FABULASH</h4>
 				</a>
 			</div>
@@ -79,7 +79,7 @@ License: You must have a valid license purchased only from themeforest(the above
 					<!-- begin:: Aside -->
 					<div class="kt-aside__brand kt-grid__item " id="kt_aside_brand">
 						<div class="kt-aside__brand-logo">
-							<a href="index.html">
+							<a href="user_admin/index.html">
 								<h4 class="aside-logo">FABULASH</h4>
 							</a>
 						</div>
