--- a/user_superadmin/hr_karyawan.html
+++ b/user_superadmin/hr_karyawan.html
@@ -59,7 +59,7 @@ License: You must have a valid license purchased only from themeforest(the above
 		<!-- begin:: Header Mobile -->
 		<div id="kt_header_mobile" class="kt-header-mobile  kt-header-mobile--fixed ">
 			<div class="kt-header-mobile__logo">
-				<a href="index.html">
+				<a href="user_superadmin/index.html">
 					<h4 class="sidebar-logo">FABULASH</h4>
 				</a>
 			</div>
@@ -79,7 +79,7 @@ License: You must have a valid license purchased only from themeforest(the above
 					<!-- begin:: Aside -->
 					<div class="kt-aside__brand kt-grid__item " id="kt_aside_brand">
 						<div class="kt-aside__brand-logo">
-							<a href="index.html">
+							<a href="user_superadmin/index.html">
 								<!-- <img alt="Logo" src="assets/media/company-logos/logo_invoice_dark.png" /> -->
 								<h4  alt="Logo" class="aside-logo">FABULASH</h4>
 							</a>
@@ -368,7 +368,7 @@ License: You must have a valid license purchased only from themeforest(the above
 
 									<!--end::Portlet-->
 								</div>
-								
+
 							</div>
 
 						</div>
