--- a/user_superadmin/hr_laporan.html
+++ b/user_superadmin/hr_laporan.html
@@ -46,6 +46,13 @@ License: You must have a valid license purchased only from themeforest(the above
 
 		<!--end::Layout Skins -->
 		<link rel="shortcut icon" href="assets/media/logos/favicon.ico" />
+
+		<style>
+			.chart-height {
+			  width: 100%;
+			  height: 400px;
+			}
+		</style>
 	</head>
 
 	<!-- end::Head -->
@@ -58,7 +65,7 @@ License: You must have a valid license purchased only from themeforest(the above
 		<!-- begin:: Header Mobile -->
 		<div id="kt_header_mobile" class="kt-header-mobile  kt-header-mobile--fixed ">
 			<div class="kt-header-mobile__logo">
-				<a href="index.html">
+				<a href="user_superadmin/index.html">
 					<h4 class="sidebar-logo">FABULASH</h4>
 				</a>
 			</div>
@@ -78,7 +85,7 @@ License: You must have a valid license purchased only from themeforest(the above
 					<!-- begin:: Aside -->
 					<div class="kt-aside__brand kt-grid__item " id="kt_aside_brand">
 						<div class="kt-aside__brand-logo">
-							<a href="index.html">
+							<a href="user_superadmin/index.html">
 								<!-- <img alt="Logo" src="assets/media/company-logos/logo_invoice_dark.png" /> -->
 								<h4  alt="Logo" class="aside-logo">FABULASH</h4>
 							</a>
@@ -333,7 +340,105 @@ License: You must have a valid license purchased only from themeforest(the above
 						<!-- begin:: Content -->
 						<div class="kt-container  kt-container--fluid  kt-grid__item kt-grid__item--fluid">
 
+                            <div class="row justify-space-between kt-margin-0">
+                                <h4 class="vertical-align" style="margin-bottom: 20px;">Laporan HR</h4>
+                                <!-- <div class="col-lg-3 col-sm-4" style="padding:unset;margin-bottom: 20px;">
+                                    <div class="input-group date">
+										<input readonly type="text" class="form-control kt-input" name="start" placeholder="Pilih Tanggal" data-col-index="1" id="kt_search_waktu"/>
+										<div class="input-group-append">
+											<span class="input-group-text">
+												<i class="la la-calendar"></i>
+											</span>
+										</div>
+                                    </div>
+                                </div> -->
+							</div>
 
+							<div class="row">
+
+                                <div class="col-lg-6 col-sm-6">
+                                    <div class="kt-portlet kt-portlet--height-fluid">
+                                    	<div class="kt-widget14">
+                                    		<div class="kt-widget14__header" style="margin-bottom:0px;">
+                                    			<h6>
+                                    				Ketepatan Waktu Masuk
+                                    			</h6>
+                                    			<h3 class="kt-widget14__desc kt-margin-t-5 color-main-dark">
+                                    				Ica
+                                    			</h3>
+                                    		</div>
+                                    	</div>
+                                    </div>
+                                </div>
+
+                                <div class="col-lg-6 col-sm-6">
+                                    <div class="kt-portlet kt-portlet--height-fluid">
+                                    	<div class="kt-widget14">
+                                    		<div class="kt-widget14__header" style="margin-bottom:0px;">
+                                    			<h6>
+                                    				Keterlambatan Waktu Masuk
+                                    			</h6>
+                                    			<h3 class="kt-widget14__desc kt-margin-t-5 color-main-dark">
+                                    				Ica
+                                    			</h3>
+                                    		</div>
+                                    	</div>
+                                    </div>
+                                </div>
+
+                                <div class="col-lg-6 col-sm-6">
+                                    <div class="kt-portlet kt-portlet--height-fluid">
+                                    	<div class="kt-widget14">
+                                    		<div class="kt-widget14__header" style="margin-bottom:0px;">
+                                    			<h6>
+                                    				Jumlah Treatment Tertinggi
+                                    			</h6>
+                                    			<h3 class="kt-widget14__desc kt-margin-t-5 color-main-dark">
+                                    				Ica
+                                    			</h3>
+                                    		</div>
+                                    	</div>
+                                    </div>
+                                </div>
+
+                                <div class="col-lg-6 col-sm-6">
+                                    <div class="kt-portlet kt-portlet--height-fluid">
+                                    	<div class="kt-widget14">
+                                    		<div class="kt-widget14__header" style="margin-bottom:0px;">
+                                    			<h6>
+                                    				Jumlah Treatment Terendah
+                                    			</h6>
+                                    			<h3 class="kt-widget14__desc kt-margin-t-5 color-main-dark">
+                                    				Ica
+                                    			</h3>
+                                    		</div>
+                                    	</div>
+                                    </div>
+                                </div>
+
+							</div>
+
+                            <div class="kt-portlet kt-portlet--height-fluid">
+                                <div class="kt-portlet__body kt-portlet__body--fluid">
+                            		<div class="kt-widget12">
+                                        <div class="kt-widget14__header kt-margin-b-30">
+                                            <div class="row kt-margin-0 justify-space-between">
+                                    			<h5 class="vertical-align">
+                                    				Jumlah Treatment
+                                    			</h5>
+                                                <div class="col-lg-3 col-sm-4">
+                                                    <select class="form-control" name="chart_range">
+        												<option>Last 30 Days</option>
+        												<option>Last 14 Days</option>
+        												<option>Last 7 Days</option>
+        											</select>
+                                                </div>
+                                            </div>
+                                		</div>
+                            			<div class="chart-height" id="chart_treatment"></div>
+                            		</div>
+                            	</div>
+                            </div>
 
 						</div>
 
@@ -404,6 +509,9 @@ License: You must have a valid license purchased only from themeforest(the above
 		<!--end::Global Theme Bundle -->
 
 		<!--begin::Page Vendors(used by this page) -->
+		<script src="https://www.amcharts.com/lib/4/core.js"></script>
+		<script src="https://www.amcharts.com/lib/4/charts.js"></script>
+		<script src="https://www.amcharts.com/lib/4/themes/animated.js"></script>
 
 		<!--end::Page Vendors -->
 
@@ -411,208 +519,160 @@ License: You must have a valid license purchased only from themeforest(the above
 		<script src="assets/js/custom/datepicker.js" type="text/javascript"></script>
 
 		<script>
-			// Select2
-			function formatRepo(repo) {
-	            if (repo.loading) return repo.text;
-	            var markup = "<div class='select2-result-repository clearfix'>" +
-	                "<div class='select2-result-repository__meta'>" +
-	                "<div class='select2-result-repository__title'>" + repo.full_name + "</div>";
-	            if (repo.description) {
-	                markup += "<div class='select2-result-repository__description'>" + repo.description + "</div>";
-	            }
-	            markup += "<div class='select2-result-repository__statistics'>" +
-	                "<div class='select2-result-repository__forks'><i class='fa fa-flash'></i> " + repo.forks_count + " Forks</div>" +
-	                "<div class='select2-result-repository__stargazers'><i class='fa fa-star'></i> " + repo.stargazers_count + " Stars</div>" +
-	                "<div class='select2-result-repository__watchers'><i class='fa fa-eye'></i> " + repo.watchers_count + " Watchers</div>" +
-	                "</div>" +
-	                "</div></div>";
-	            return markup;
-	        }
+			am4core.ready(function() {
 
-	        function formatRepoSelection(repo) {
-	            return repo.full_name || repo.text;
-	        }
+			// Themes begin
+			am4core.useTheme(am4themes_animated);
+			// Themes end
 
-			$("#kt_select2_treatment_customer_nama").select2({
-	            placeholder: "Nama",
-			    multiple: true,
-			    maximumSelectionSize: 1,
-	            allowClear: true,
-	            ajax: {
-	                url: "source/customer.json",
-	                dataType: 'json',
-			        type: "GET",
-	                delay: 250,
-	                data: function(params) {
-	                    return {
-	                        q: params.term, // search term
-	                        page: params.page
-	                    };
-	                },
-	                processResults: function(data, params) {
-	                    // parse the results into the format expected by Select2
-	                    // since we are using custom formatting functions we do not need to
-	                    // alter the remote JSON data, except to indicate that infinite
-	                    // scrolling can be used
-	                    params.page = params.page || 1;
+			/**
+			 * Chart design taken from Samsung health app
+			 */
 
-						return {
-			                results: $.map(data, function (item) {
-			                    return {
-			                        text: item.nama+', '+item.alamat,
-			                        id: item.no
-			                    }
-			                })
-			            };
-	                },
-	                cache: true
-	            },
-	            escapeMarkup: function(markup) {
-	                return markup;
-	            }, // let our custom formatter work
-	            minimumInputLength: 1
-	            // templateResult: formatRepo, // omitted for brevity, see the source of this page
-	            // templateSelection: formatRepoSelection // omitted for brevity, see the source of this page
-	        });
+			var chart = am4core.create("chart_treatment", am4charts.XYChart);
+			chart.hiddenState.properties.opacity = 0; // this creates initial fade-in
 
-			// Sweetalert
-			$('#kt_sweetalert_berhasil').click(function(e) {
-				swal.fire({
-					title: "Berhasil",
-					text: "Treatment berhasil ditambahkan.",
-					type: "success",
-					confirmButtonText: "Ok",
-					confirmButtonClass: "btn btn-brand"
-				}).then(function(result) {
-					// location.reload();
-				});
-			});
+			chart.data = [{
+				"date": "2018-01-01",
+				"steps": 4561
+			}, {
+				"date": "2018-01-02",
+				"steps": 5687
+			}, {
+				"date": "2018-01-03",
+				"steps": 6348
+			}, {
+				"date": "2018-01-04",
+				"steps": 4878
+			}, {
+				"date": "2018-01-05",
+				"steps": 9867
+			}, {
+				"date": "2018-01-06",
+				"steps": 7561
+			}, {
+				"date": "2018-01-07",
+				"steps": 1287
+			}, {
+				"date": "2018-01-08",
+				"steps": 3298
+			}, {
+				"date": "2018-01-09",
+				"steps": 5697
+			}, {
+				"date": "2018-01-10",
+				"steps": 4878
+			}, {
+				"date": "2018-01-11",
+				"steps": 8788
+			}, {
+				"date": "2018-01-12",
+				"steps": 9560
+			}, {
+				"date": "2018-01-13",
+				"steps": 11687
+			}, {
+				"date": "2018-01-14",
+				"steps": 5878
+			}, {
+				"date": "2018-01-15",
+				"steps": 9789
+			}, {
+				"date": "2018-01-16",
+				"steps": 3987
+			}, {
+				"date": "2018-01-17",
+				"steps": 5898
+			}, {
+				"date": "2018-01-18",
+				"steps": 9878
+			}, {
+				"date": "2018-01-19",
+				"steps": 13687
+			}, {
+				"date": "2018-01-20",
+				"steps": 6789
+			}, {
+				"date": "2018-01-21",
+				"steps": 4531
+			}, {
+				"date": "2018-01-22",
+				"steps": 5856
+			}, {
+				"date": "2018-01-23",
+				"steps": 5737
+			}, {
+				"date": "2018-01-24",
+				"steps": 9987
+			}, {
+				"date": "2018-01-25",
+				"steps": 16457
+			}, {
+				"date": "2018-01-26",
+				"steps": 7878
+			}, {
+				"date": "2018-01-27",
+				"steps": 6845
+			}, {
+				"date": "2018-01-28",
+				"steps": 4659
+			}, {
+				"date": "2018-01-29",
+				"steps": 7892
+			}, {
+				"date": "2018-01-30",
+				"steps": 7362
+			}, {
+				"date": "2018-01-31",
+				"steps": 3268
+			}];
 
-			$('#kt_sweetalert_berhasil_modal').click(function(e) {
-				swal.fire({
-					title: "Berhasil",
-					text: "Pelanggan berhasil ditambahkan.",
-					type: "success",
-					confirmButtonText: "Ok",
-					confirmButtonClass: "btn btn-brand"
-				});
-			});
+			chart.dateFormatter.inputDateFormat = "YYYY-MM-dd";
+			chart.zoomOutButton.disabled = true;
 
-			// Toastr
-			$('#showtoast').click(function() {
-				toastr.options = {
-					"closeButton": false,
-					"debug": false,
-					"newestOnTop": false,
-					"progressBar": false,
-					"positionClass": "toast-top-right",
-					"preventDuplicates": false,
-					"onclick": null,
-					"showDuration": "300",
-					"hideDuration": "1000",
-					"timeOut": "2500",
-					"extendedTimeOut": "1000",
-					"showEasing": "swing",
-					"hideEasing": "linear",
-					"showMethod": "fadeIn",
-					"hideMethod": "fadeOut"
-				}
-				toastr.info("Persetujuan terkirim");
-			});
+			var dateAxis = chart.xAxes.push(new am4charts.DateAxis());
+			dateAxis.renderer.grid.template.strokeOpacity = 0;
+			dateAxis.renderer.minGridDistance = 10;
+			dateAxis.dateFormats.setKey("day", "d");
+			dateAxis.tooltip.hiddenState.properties.opacity = 1;
+			dateAxis.tooltip.hiddenState.properties.visible = true;
 
-			$('#showtoast').click(function() {
-				toastr.options = {
-					"closeButton": false,
-					"debug": false,
-					"newestOnTop": false,
-					"progressBar": false,
-					"positionClass": "toast-top-right",
-					"preventDuplicates": false,
-					"onclick": null,
-					"showDuration": "300",
-					"hideDuration": "1000",
-					"timeOut": "2500",
-					"extendedTimeOut": "1000",
-					"showEasing": "swing",
-					"hideEasing": "linear",
-					"showMethod": "fadeIn",
-					"hideMethod": "fadeOut"
-				}
-				toastr.success("Persetujuan diterima");
-			});
+			var valueAxis = chart.yAxes.push(new am4charts.ValueAxis());
 
-			$('#showtoast').click(function() {
-				toastr.options = {
-					"closeButton": false,
-					"debug": false,
-					"newestOnTop": false,
-					"progressBar": false,
-					"positionClass": "toast-top-right",
-					"preventDuplicates": false,
-					"onclick": null,
-					"showDuration": "300",
-					"hideDuration": "1000",
-					"timeOut": "2500",
-					"extendedTimeOut": "1000",
-					"showEasing": "swing",
-					"hideEasing": "linear",
-					"showMethod": "fadeIn",
-					"hideMethod": "fadeOut"
-				}
-				toastr.error("Persetujuan ditolak");
-			});
+			var series = chart.series.push(new am4charts.ColumnSeries);
+			series.dataFields.valueY = "steps";
+			series.dataFields.dateX = "date";
+			series.tooltipText = "{valueY.value}";
+			series.tooltip.pointerOrientation = "vertical";
+			series.tooltip.hiddenState.properties.opacity = 1;
+			series.tooltip.hiddenState.properties.visible = true;
 
-			// Form Validation
-			$("#kt_form_1").validate({
-	            // define validation rules
-	            rules: {
-	                treatment_customer_nohp: {
-	                    required: true,
-	                    digits: true
-	                },
-	                treatment_customer_nama: {
-	                    required: true
-	                }
-	            },
+			var columnTemplate = series.columns.template;
+			columnTemplate.width = 20;
+			columnTemplate.column.cornerRadiusTopLeft = 20;
+			columnTemplate.column.cornerRadiusTopRight = 20;
+			columnTemplate.strokeOpacity = 0;
 
-	            invalidHandler: function(event, validator) {
-	                KTUtil.scrollTop();
-	            },
-	            submitHandler: function(form) {
-	                //form[0].submit(); // submit the form
-	            }
-        	});
+			columnTemplate.adapter.add("fill", function (fill, target) {
+				return am4core.color("#8cdbd7");
+			})
 
-			$("#kt_form_2").validate({
-	            // define validation rules
-	            rules: {
-					customer_nama : {
-						required: true
-					},
-					customer_lahir : {
-						required: true
-					},
-					customer_nohp : {
-						required: true,
-						digits: true
-					},
-					customer_email : {
-						required: true,
-						email: true
-					},
-					customer_alamat : {
-						required: true
-					}
-	            },
 
-	            invalidHandler: function(event, validator) {
-	                KTUtil.scrollTop();
-	            },
-	            submitHandler: function(form) {
-	                //form[0].submit(); // submit the form
-	            }
-        	});
+			chart.cursor = new am4charts.XYCursor();
+			chart.cursor.behavior = "none";
+
+			cursor.events.on("cursorpositionchanged", updateTooltip);
+			dateAxis.events.on("datarangechanged", updateTooltip);
+
+			function updateTooltip() {
+				dateAxis.showTooltipAtPosition(0.5);
+				series.showTooltipAtPosition(0.5, 0);
+				series.tooltip.validate(); // otherwise will show other columns values for a second
+			}
+
+			}); // end am4core.ready()
 		</script>
+
 		<!--end::Page Scripts -->
 	</body>
 
