directory croppie changed

--- a/user_superadmin/hr_karyawan_detail.html
+++ b/user_superadmin/hr_karyawan_detail.html
@@ -29,7 +29,7 @@ License: You must have a valid license purchased only from themeforest(the above
 
 		<!--begin::Page Vendors Styles(used by this page) -->
 		<link href="assets/plugins/custom/datatables/datatables.bundle.css" rel="stylesheet" type="text/css">
-		<link href="assets/css/croppie.css" rel="stylesheet" type="text/css">
+		<link href="assets/css/vendor/croppie/croppie.css" rel="stylesheet" type="text/css">
 
 		<!--end::Page Vendors Styles -->
 
@@ -671,7 +671,7 @@ License: You must have a valid license purchased only from themeforest(the above
 
 		<!--begin::Page Vendors(used by this page) -->
 		<script src="assets/plugins/custom/datatables/datatables.bundle.js" type="text/javascript"></script>
-		<script src="assets/js/croppie.js"></script>
+		<script src="assets/js/vendor/croppie/croppie.js"></script>
 
 		<!--end::Page Vendors -->
 
